// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rhx enroll --as slug collision (acceptance) given: [case1] \`@:foreman\` already claimed by the default-roleset actor when: [t0] a DIFFERENT actor tries \`--as @:foreman\` (\`-driver\` roleset) then: the collision error is locked to a snapshot 1`] = `
"
✋ ConstraintError: slug "foreman" is already claimed by a different actor

{
  "hint": "pick a different --as @:<slug>, or reach the extant clone by that slug",
  "slug": "foreman"
}

"
`;

exports[`rhx enroll --as slug collision (acceptance) given: [case1] \`@:foreman\` already claimed by the default-roleset actor when: [t1] the same collision under \`--output json\` (the machine twin) then: the collision json error shape is locked (machine contract) 1`] = `
"{
  "class": "ConstraintError",
  "message": "slug \\"foreman\\" is already claimed by a different actor",
  "hint": "pick a different --as @:<slug>, or reach the extant clone by that slug",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "slug": "foreman",
    "hint": "pick a different --as @:<slug>, or reach the extant clone by that slug"
  }
}
"
`;

exports[`rhx enroll --help (acceptance) given: [case1] a bare \`enroll --help\` with NO brain when: [t0] the human asks for help without a brain then: the help format is locked (visual spot-check) 1`] = `
"Usage: rhachet enroll [options] [brain]

enroll a brain cli as a managed, addressable clone

Options:
  --brain <brain>     the brain to enroll (alias of the positional)
  -r, --roles <spec>  roles to enroll — a single spec (e.g. mechanic,
                      +architect, -driver). for multiple use the comma form
                      (--roles -driver,-reviewer) or quote the space form
                      (--roles "-driver -reviewer")
  --as <address>      name the clone with a stable handle (@:<slug>)
  --no-socket         enroll without a managed reach socket
  --reason <text>     why this enrollment happened (or @stdin)
  --watch             hold the clone in the foreground (default at a terminal)
  --async             report the clone address and exit (default with no
                      terminal)
  --await             hold until the clone answers its prompt and exits, then
                      forward its exit code (default with a prompt, e.g. -p
                      "<prompt>")
  --output <mode>     output mode: tree (default) or json (default: "tree")
"
`;

exports[`rhx enroll --reason (acceptance) given: [case1] a linked repo, \`--reason "<text>"\` (plain) when: [t0] \`enroll claude --reason "nightly cron refresh"\` runs then: the full persisted audit line is locked to a snapshot 1`] = `
"{"schemaVersion":1,"at":"$AT","roles":["driver","architect","mechanic"],"delta":null,"reason":"nightly cron refresh"}
"
`;

exports[`rhx enroll --roles (acceptance) given: [case1] a repo with mechanic + architect + driver linked when: [t0] \`enroll claude --roles -ghostrole\` (the regression path) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: role 'ghostrole' not found

{
  "hint": "linked roles: driver, architect, mechanic",
  "role": "ghostrole",
  "rolesLinked": [
    "driver",
    "architect",
    "mechanic"
  ],
  "suggestion": null
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case1] a repo with mechanic + architect + driver linked when: [t0b] \`enroll claude --roles -ghostrole --output json\` (the machine channel) then: the structured error is locked to a snapshot 1`] = `
"{
  "class": "ConstraintError",
  "message": "role 'ghostrole' not found",
  "hint": "linked roles: driver, architect, mechanic",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "role": "ghostrole",
    "rolesLinked": [
      "driver",
      "architect",
      "mechanic"
    ],
    "suggestion": null,
    "hint": "linked roles: driver, architect, mechanic"
  }
}
"
`;

exports[`rhx enroll --roles (acceptance) given: [case1] a repo with mechanic + architect + driver linked when: [t1] \`enroll claude --roles -ghostrole,+architect\` (comma form) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: role 'ghostrole' not found

{
  "hint": "linked roles: driver, architect, mechanic",
  "role": "ghostrole",
  "rolesLinked": [
    "driver",
    "architect",
    "mechanic"
  ],
  "suggestion": null
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case1] a repo with mechanic + architect + driver linked when: [t2] \`enroll claude --roles "-ghostrole +architect"\` (quoted space form) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: role 'ghostrole' not found

{
  "hint": "linked roles: driver, architect, mechanic",
  "role": "ghostrole",
  "rolesLinked": [
    "driver",
    "architect",
    "mechanic"
  ],
  "suggestion": null
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case1] a repo with mechanic + architect + driver linked when: [t3] \`enroll claude --roles +mechanic,-mechanic\` (contradiction) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: cannot both add and remove role "mechanic" in one call

{
  "additions": [
    "mechanic"
  ],
  "subtractions": [
    "mechanic"
  ],
  "tokens": [
    "+mechanic",
    "-mechanic"
  ]
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case1] a repo with mechanic + architect + driver linked when: [t4] \`enroll claude --roles mechanic,+architect\` (mixed call) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: cannot mix absolute and incremental roles — use all-absolute (mechanic behaver) OR all-incremental (+architect -reviewer)

{
  "absolutes": [
    "mechanic"
  ],
  "additions": [
    "architect"
  ],
  "subtractions": [],
  "tokens": [
    "mechanic",
    "+architect"
  ]
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case1] a repo with mechanic + architect + driver linked when: [t5] \`enroll claude --roles +\` (empty role after sigil) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: role specifier cannot be empty after "+"

{
  "token": "+",
  "tokens": [
    "+"
  ]
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case1] a repo with mechanic + architect + driver linked when: [t6] \`enroll claude --roles ""\` (empty spec) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: no roles specified — pass at least one role (e.g. mechanic, or +architect -reviewer), or omit --roles to use defaults

{
  "tokens": []
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case2] the POSITIVE regression path — \`-driver\` drops driver when: [t0] \`enroll claude --roles -driver\` (known role, delta subtract) then: the authored config body is locked to a snapshot 1`] = `
"{
  "hooks": {
    "SessionStart": [
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=mechanic"
          }
        ]
      },
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=architect"
          }
        ]
      }
    ]
  },
  "claudeMdExcludes": [
    "/TMP_TEST_DIR/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/CLAUDE.md",
    "/HOME_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/CLAUDE.local.md",
    "/TMP_TEST_DIR/.claude/rules/**",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/rules/**"
  ]
}
"
`;

exports[`rhx enroll --roles (acceptance) given: [case2] the POSITIVE regression path — \`-driver\` drops driver when: [t0] \`enroll claude --roles -driver\` (known role, delta subtract) then: the success output is locked to a snapshot 1`] = `
"
😶 clone enrolled
   ├─ 🎙️ rhx clone say @:__SERIAL8__ --what "…"
   └─ 🎧 rhx clone get @:__SERIAL8__ --tail 50

"
`;

exports[`rhx enroll --roles (acceptance) given: [case2b] the PRIMARY journey — bare \`enroll claude\` keeps the DEFAULT roleset when: [t0] \`enroll claude\` (no --roles → the default roleset) then: the authored default-roleset config body is locked to a snapshot 1`] = `
"{
  "hooks": {
    "SessionStart": [
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=bhrain/role=driver"
          }
        ]
      },
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=mechanic"
          }
        ]
      },
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=architect"
          }
        ]
      }
    ]
  },
  "claudeMdExcludes": [
    "/TMP_TEST_DIR/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/CLAUDE.md",
    "/HOME_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/CLAUDE.local.md",
    "/TMP_TEST_DIR/.claude/rules/**",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/rules/**"
  ]
}
"
`;

exports[`rhx enroll --roles (acceptance) given: [case2b] the PRIMARY journey — bare \`enroll claude\` keeps the DEFAULT roleset when: [t0] \`enroll claude\` (no --roles → the default roleset) then: the success output is locked to a snapshot 1`] = `
"
😶 clone enrolled
   ├─ 🎙️ rhx clone say @:__SERIAL8__ --what "…"
   └─ 🎧 rhx clone get @:__SERIAL8__ --tail 50

"
`;

exports[`rhx enroll --roles (acceptance) given: [case2b] the PRIMARY journey — bare \`enroll claude\` keeps the DEFAULT roleset when: [t1] the same bare enroll with --output json (the machine handoff) then: the detached machine handoff shape is locked (machine contract) 1`] = `
"{"outcome":"baked","serial":"__SERIAL__","slug":null,"socketEligible":true}
"
`;

exports[`rhx enroll --roles (acceptance) given: [case3] positive replace — bare \`mechanic\` keeps ONLY mechanic when: [t0] \`enroll claude --roles mechanic\` (replace mode) then: the authored config body is locked to a snapshot 1`] = `
"{
  "hooks": {
    "SessionStart": [
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=mechanic"
          }
        ]
      }
    ]
  },
  "claudeMdExcludes": [
    "/TMP_TEST_DIR/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/CLAUDE.md",
    "/HOME_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/CLAUDE.local.md",
    "/TMP_TEST_DIR/.claude/rules/**",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/rules/**"
  ]
}
"
`;

exports[`rhx enroll --roles (acceptance) given: [case4] positive add — \`+architect\` keeps the default set when: [t0] \`enroll claude --roles +architect\` (delta add) then: the authored config body is locked to a snapshot 1`] = `
"{
  "hooks": {
    "SessionStart": [
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=bhrain/role=driver"
          }
        ]
      },
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=mechanic"
          }
        ]
      },
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=architect"
          }
        ]
      }
    ]
  },
  "claudeMdExcludes": [
    "/TMP_TEST_DIR/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/CLAUDE.md",
    "/HOME_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/CLAUDE.local.md",
    "/TMP_TEST_DIR/.claude/rules/**",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/rules/**"
  ]
}
"
`;

exports[`rhx enroll --roles (acceptance) given: [case5] positive mixed — \`-driver,+architect\` (comma) drops driver when: [t0] \`enroll claude --roles -driver,+architect\` (comma mixed) then: the authored config body is locked to a snapshot 1`] = `
"{
  "hooks": {
    "SessionStart": [
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=mechanic"
          }
        ]
      },
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=architect"
          }
        ]
      }
    ]
  },
  "claudeMdExcludes": [
    "/TMP_TEST_DIR/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/CLAUDE.md",
    "/HOME_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/CLAUDE.local.md",
    "/TMP_TEST_DIR/.claude/rules/**",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/rules/**"
  ]
}
"
`;

exports[`rhx enroll --roles (acceptance) given: [case6] positive mixed — \`"-driver +architect"\` (space) drops driver when: [t0] \`enroll claude --roles "-driver +architect"\` (quoted space mixed) then: the authored config body is locked to a snapshot 1`] = `
"{
  "hooks": {
    "SessionStart": [
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=mechanic"
          }
        ]
      },
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=architect"
          }
        ]
      }
    ]
  },
  "claudeMdExcludes": [
    "/TMP_TEST_DIR/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/CLAUDE.md",
    "/HOME_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/CLAUDE.local.md",
    "/TMP_TEST_DIR/.claude/rules/**",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/rules/**"
  ]
}
"
`;

exports[`rhx enroll --roles (acceptance) given: [case7] the \`-r\` short alias runs the full path end-to-end when: [t0] \`enroll claude -r -driver\` (short alias + delta subtract) then: the authored config body is locked to a snapshot 1`] = `
"{
  "hooks": {
    "SessionStart": [
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=mechanic"
          }
        ]
      },
      {
        "matcher": "*",
        "hooks": [
          {
            "type": "command",
            "command": "true",
            "author": "repo=ehmpathy/role=architect"
          }
        ]
      }
    ]
  },
  "claudeMdExcludes": [
    "/TMP_TEST_DIR/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/AGENTS.md",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/CLAUDE.md",
    "/HOME_DIR/.claude/CLAUDE.md",
    "/TMP_TEST_DIR/CLAUDE.local.md",
    "/TMP_TEST_DIR/.claude/rules/**",
    "/TMP_TEST_DIR/.agent/.actors/actor.via.slug=.default/brain/.claude/rules/**"
  ]
}
"
`;

exports[`rhx enroll --roles (acceptance) given: [case8] a repo with no .agent/ directory when: [t0] \`enroll claude --roles mechanic\` with no .agent/ then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: no .agent/ found in this repo

{
  "hint": "run \`rhachet roles link\` first to initialize",
  "gitroot": "$TESTDIR"
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case9] a repo with an empty .agent/ (no roles linked) when: [t0] \`enroll claude --roles mechanic\` with empty .agent/ then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: no roles found in .agent/

{
  "hint": "run \`rhachet roles link\` first to link roles",
  "gitroot": "$TESTDIR"
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case10] pre-spawn validation errors on a linked repo when: [t0] \`enroll claude --roles mechnic\` (replace-mode typo) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: role 'mechnic' not found, did you mean 'mechanic'?

{
  "hint": "linked roles: driver, architect, mechanic",
  "role": "mechnic",
  "rolesLinked": [
    "driver",
    "architect",
    "mechanic"
  ],
  "suggestion": "mechanic"
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case10] pre-spawn validation errors on a linked repo when: [t1] \`enroll openai --roles mechanic\` (unsupported brain) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: brain 'openai' not supported. supported: claude, claude-code

{
  "brain": "openai"
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case10] pre-spawn validation errors on a linked repo when: [t2] \`enroll claude --brain codex\` (brain conflict) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: brain conflict: positional 'claude' vs --brain 'codex'. pass just one, or make them match

{
  "positional": "claude",
  "flag": "codex"
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case10] pre-spawn validation errors on a linked repo when: [t3] \`enroll claude --roles -driver -architect\` (unquoted space, 2 deltas) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: enroll's --roles takes a single spec; saw an extra role token '-architect' as a separate argument. to enroll multiple roles, separate them with commas (e.g. --roles -driver,-reviewer) or quote the space form (--roles "-driver -reviewer")

{
  "brain": "claude",
  "rolesSpec": "-driver",
  "collision": "-architect"
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case10] pre-spawn validation errors on a linked repo when: [t4] \`enroll claude --as @:<uuid>\` (an unreachable uuid-shaped handle) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: --as '@:__SERIAL__' is uuid-shaped, which reads as a serial — a clone named this way would be unreachable

{
  "hint": "pick a non-uuid handle, e.g. --as @:driver",
  "as": "@:__SERIAL__"
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case10] pre-spawn validation errors on a linked repo when: [t4b] \`enroll claude --as @:<unsafe>\` (an unsafe-charset handle) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: --as slug 'Bad Slug!' is not a safe handle

{
  "hint": "use lowercase letters, digits, and - . _ (e.g. --as @:driver)",
  "as": "@:Bad Slug!",
  "slug": "Bad Slug!"
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case10] pre-spawn validation errors on a linked repo when: [t4c] \`enroll claude --as <no-marker>\` (a dropped @: sigil) then: the error output is locked to a snapshot 1`] = `
"
✋ ConstraintError: 'driver' is not a clone address; clone addresses start with '@:'. did you mean '@:driver'?

{
  "hint": "use '@:driver'",
  "raw": "driver"
}

"
`;

exports[`rhx enroll --roles (acceptance) given: [case10] pre-spawn validation errors on a linked repo when: [t5] \`enroll claude --brain codex --output json\` (failing enroll, machine channel) then: the structured error is locked to a snapshot 1`] = `
"{
  "class": "ConstraintError",
  "message": "brain conflict: positional 'claude' vs --brain 'codex'. pass just one, or make them match",
  "hint": null,
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "positional": "claude",
    "flag": "codex"
  }
}
"
`;

exports[`rhx enroll --roles (acceptance) given: [case11] a linked repo whose \`claude\` sits BELOW the version floor when: [t0] \`enroll claude --roles mechanic\` then: the refusal output is locked to a snapshot 1`] = `
"
✋ ConstraintError: brain-cli 'claude' is 2.1.87 at $STUBDIR_WINNER/claude, below the floor 2.1.277

{
  "hint": "a newer 2.1.280 sits at $STUBDIR_NEWER/claude, but $STUBDIR_WINNER/claude wins your PATH — put that dir first, or upgrade the one that wins: pnpm add -g @anthropic-ai/claude-code@latest",
  "bin": "claude",
  "version": "2.1.87",
  "floor": "2.1.277",
  "resolvedPath": "$STUBDIR_WINNER/claude",
  "shadowed": [
    {
      "path": "$STUBDIR_NEWER/claude",
      "version": "2.1.280"
    }
  ]
}

"
`;

exports[`rhx enroll depth budget (acceptance) given: [case1] a linked repo, the caller is a clone at depth 1 when: [t0] it enrolls a peer — which would sit at depth 2 then: the structured error is locked to a snapshot 1`] = `
"{
  "class": "ConstraintError",
  "message": "clone enroll depth budget spent",
  "hint": "a clone at depth 1 may not enroll another — ask the clone that enrolled you, or a human, to stand this one up",
  "reachState": null,
  "reachCause": null,
  "metadata": {
    "depthRequested": 2,
    "depthMax": 1,
    "hint": "a clone at depth 1 may not enroll another — ask the clone that enrolled you, or a human, to stand this one up"
  }
}
"
`;

exports[`rhx enroll depth budget (acceptance) given: [case1] a linked repo, the caller is a clone at depth 1 when: [t1] the same enroll is refused in TREE mode, for a human then: the TREE render is locked to a snapshot 1`] = `
"
✋ ConstraintError: clone enroll depth budget spent

{
  "hint": "a clone at depth 1 may not enroll another — ask the clone that enrolled you, or a human, to stand this one up",
  "depthRequested": 2,
  "depthMax": 1
}

"
`;

exports[`rhx enroll owns the system prompt (acceptance) given: [case1] a linked repo whose \`claude\` records the argv it is spawned with when: [t0] \`enroll claude\` (no passthrough) then: the recorded argv is locked to a snapshot 1`] = `
[
  "--setting-sources",
  "user,local",
  "--settings",
  "$TESTDIR",
  "--system-prompt",
  "<empty>",
]
`;

exports[`rhx enroll owns the system prompt (acceptance) given: [case1] a linked repo whose \`claude\` records the argv it is spawned with when: [t2] \`enroll claude --system-prompt <text>\` (a passthrough override) then: the refusal is locked to a snapshot 1`] = `
"
✋ ConstraintError: enroll owns the system prompt; the passthrough may not override it

{
  "hint": "rhachet spawns every clone with \`--system-prompt ''\` and boots its briefs via CLAUDE.md. to add text, pass \`--append-system-prompt <text>\`; to change what a clone knows, add a brief to one of its roles",
  "overrides": [
    "--system-prompt"
  ]
}

"
`;

exports[`rhx enroll with no tty (acceptance) given: [case1] a linked repo + a live stub brain, enrolled with NO tty when: [t0] \`enroll claude --output json\` runs through a piped stdio spawn then: 🔴 the clone ANSWERS a say — reach is proven, never asserted 1`] = `"😶🎙️ <verdict> @:<address>"`;

exports[`rhx enroll with no tty (acceptance) given: [case1] a linked repo + a live stub brain, enrolled with NO tty when: [t1] \`enroll claude --async\` with the mode named EXPLICITLY then: 🔴 the clone ANSWERS — the explicit flag never reached the brain 1`] = `"😶🎙️ <verdict> @:<address>"`;
